crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__additional_false.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"additionalProperties\":false,\"properties\":{\"a\":{}}}"
expression: is_valid_body(schema)
---
match instance {
            __Value::Object(obj) => obj.keys().all(|key| { matches!(key.as_str(), "a") }),
            _ => true,
        }
