crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__additional_false_no_siblings.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"additionalProperties\":false,\"type\":\"object\"}"
expression: is_valid_body(schema)
---
match instance {
            serde_json::Value::Object(obj) => obj.is_empty(),
            _ => false,
        }
