crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__additional_items_false_subsumed_by_max_items.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"$schema\":\"http://json-schema.org/draft-07/schema#\",\"additionalItems\":false,\"items\":[{\"type\":\"string\"}],\"maxItems\":1,\"type\":\"array\"}"
expression: is_valid_body(schema)
---
match instance {
            __Value::Array(arr) => {
                ((arr.len() as u64) <= 1)
                    && (arr.get(0usize).map_or(true, |instance| instance.is_string()))
            }
            _ => false,
        }
