crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__additional_schema.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"additionalProperties\":{\"type\":\"string\"},\"properties\":{\"a\":{}}}"
expression: is_valid_body(schema)
---
match instance {
            __Value::Object(obj) => {
                obj.iter()
                    .all(|(key, instance)| {
                        let key_str = key.as_str();
                        match key_str {
                            "a" => true,
                            _ => instance.is_string(),
                        }
                    })
            }
            _ => true,
        }
