crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__all_of.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"allOf\":[{\"type\":\"string\"},{\"minLength\":1}]}"
expression: is_valid_body(schema)
---
(instance.is_string())
            && (match instance {
                __Value::String(s) => !s.is_empty(),
                _ => true,
            })
