crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__all_of_leading_false.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"allOf\":[false,{\"type\":\"string\"}]}"
expression: is_valid_body(schema)
---
(false) && (instance.is_string())
